# custombot

./: .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  FEATURES.md  Makefile  PLAN.md  README.md  TODO.md  config.example.json  h24loop.sh  main.py  mutmut_config.py  opencode.json  package.json  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
.opencode/context/: INDEX.md  navigation.md
.serena/: project.yml
.tmp/external-context/: .manifest.json
scripts/: check_config_example_sync.py  check_coverage_floor.py  check_plan_syntax.py  release.py
src/: __init__.py  __version__.py  app.py  bot.py  builder.py  chunks.py  constants.py  dependency_check.py  diagnose.py  exceptions.py  health.py  lifecycle.py  lifecycle_persistence.py  llm.py  llm_error_classifier.py  llm_provider.py  memory.py  message_queue.py  message_queue_buffer.py  message_queue_persistence.py  progress.py  rate_limiter.py  routing.py  scheduler.py  shutdown.py  vector_memory.py  workspace_integrity.py
src/bot/: __init__.py  _bot.py  _event_helpers.py  context_building.py  crash_recovery.py  plan_execute.py  preflight.py  react_loop.py  response_delivery.py  turn_context.py  turn_orchestrator.py
src/channels/: __init__.py  base.py  cli.py  message_validator.py  neonize_backend.py  registry.py  stealth.py  validation.py  whatsapp.py
src/config/: __init__.py  config.py  config_loader.py  config_schema.py  config_schema_defs.py  config_validation.py  config_watcher.py  layers.py
src/constants/: __init__.py  app.py  cache.py  db.py  health.py  llm.py  memory.py  messaging.py  network.py  routing.py  scheduler.py  security.py  shutdown.py  skills.py  workspace.py
src/core/: __init__.py  command_bus.py  context_assembler.py  context_builder.py  context_cache.py  dedup.py  degradation.py  di.py  errors.py  event_bus.py  human_approval.py  instruction_loader.py  message_pipeline.py  orchestrator.py  project_context.py  serialization.py  skill_breaker_registry.py  skill_task_manager.py  startup.py  stream_accumulator.py  tool_executor.py  tool_formatter.py  topic_cache.py
src/custombot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/db/: __init__.py  _budget_helpers.py  compression.py  db.py  db_index.py  db_integrity.py  db_utils.py  db_validation.py  event_store.py  file_pool.py  generations.py  message_store.py  migration.py  read_model.py  redis_cache.py  sqlite_pool.py  sqlite_utils.py  storage_protocol.py  write_journal.py
src/health/: __init__.py  checks.py  middleware.py  models.py  prometheus.py  registry.py  server.py
src/llm/: __init__.py  _client.py  _error_classifier.py  _provider.py  context_compressor.py  cost_tracker.py  fallback.py  loop_strategies.py  model_router.py  reflection.py  response_cache.py  structured_output.py  summarizer.py  token_estimator.py  tool_selector.py  tool_validator.py  topic_detector.py
src/logging/: __init__.py  http_logging.py  llm_logging.py  logging_config.py
src/memory/: __init__.py  budget.py  consolidation.py  cross_chat.py  decay.py  episodic.py  hybrid_retrieval.py  preferences.py  semantic_graph.py  versioning.py  working.py
src/monitoring/: __init__.py  anomaly_detector.py  memory.py  metrics_types.py  otel_metrics.py  performance.py  quality_metrics.py  tracing.py  workspace_monitor.py
src/project/: __init__.py  dates.py  graph.py  recall.py  store.py
src/scheduler/: __init__.py  cron.py  engine.py  persistence.py
src/security/: __init__.py  audit.py  encryption.py  log_redaction.py  path_validator.py  prompt_injection.py  sandbox.py  signing.py  template.py  url_sanitizer.py
src/skills/: __init__.py  base.py  lazy_loader.py  manifest.py  prompt_skill.py  sandbox.py
src/ui/: __init__.py  accessibility.py  branching.py  cli_output.py  image_handler.py  language.py  menu.py  options_tui.py  progress.py  reaction_handler.py  response_adapter.py  rich_messages.py  voice_handler.py
src/utils/: __init__.py  async_executor.py  async_file.py  background_service.py  circuit_breaker.py  dag.py  disk.py  frontmatter.py  json_utils.py  locking.py  logging_utils.py  mmap_reader.py  path.py  phone.py  protocols.py  registry.py  retry.py  singleton.py  timing.py  type_guards.py  validation.py
src/vector_memory/: __init__.py  _utils.py  batch.py  health.py
tests/: conftest.py  test_async_executor.py  test_channel_contract.py  test_chaos.py  test_config_hotreload_integration.py  test_crash_recovery_e2e.py  test_logging_utils.py  test_react_edge_cases.py  test_routing.py  test_routing_property.py  test_scheduler_vector_coverage.py  test_security_subsystem.py
tests/e2e/: test_bot_react_loop.py  test_database.py  test_memory.py  test_options_command.py  test_skills.py  test_smoke.py  test_start_command.py  test_whatsapp_qr.py
tests/helpers/: __init__.py  llm_mocks.py
tests/integration/: __init__.py  test_application_lifecycle.py  test_chaos_concurrent.py  test_concurrent_load.py  test_config_hotreload_e2e.py  test_config_watcher.py  test_crash_recovery_e2e.py  test_db_validate_connection.py  test_message_pipeline.py  test_message_queue_crash_recovery.py  test_react_loop_integration.py  test_routing_watchdog.py  test_scheduled_pipeline.py  test_shutdown_sequence.py
tests/load/: __init__.py  load_runner.py
tests/mocks/: __init__.py  llm_responses.py  mock_llm.py
tests/unit/: bench_regression.py  bench_serialization.py  conftest.py  test_application.py  test_application_semaphore.py  test_audit.py  test_base_channel_contract.py  test_bot.py  test_builder.py  test_channel_validation.py  test_circuit_breaker.py  test_cli_version.py  test_config_env.py  test_config_roundtrip.py  test_config_schema_uri.py  test_confirm_send.py  test_context_assembler.py  test_context_builder.py  test_dag.py  test_db.py  test_dedup.py  test_diagnose_orphan_dirs.py  test_error_classification.py  test_error_handler_middleware.py  test_event_bus.py  (+51 more)
(+182 files in other folders)
