[project]
name = "custombot"
version = "1.0.0"
description = "A lightweight WhatsApp AI assistant"
requires-python = ">=3.11"
dependencies = [
    "openai~=2.29.0",
    "httpx~=0.28.0",
    "aiohttp~=3.13.0",
    "click~=8.3.0",
    "rich~=14.3.0",
    "python-dotenv~=1.2.0",
    "psutil~=6.0.0",
    "pyyaml~=6.0.0",
    "neonize~=0.3.16",
    "questionary~=2.1.0",
    "duckduckgo-search~=8.1.0",
    "sqlite-vec~=0.1.7",
    "orjson~=3.10.0",
    "msgpack~=1.1.0",
    "opentelemetry-api~=1.30.0",
    "opentelemetry-sdk~=1.30.0",
    "watchdog>=4.0.0",
    "xxhash>=3.5,<3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "hypothesis>=6.100.0",
]

[project.scripts]
custombot = "main:cli"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default argument (dataclasses need this)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "neonize.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "sqlite_vec.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "bench_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
