[project]
name = "custombot"
version = "1.0.0"
description = "A lightweight WhatsApp AI assistant"
requires-python = ">=3.11"
dependencies = [
    "openai~=2.29.0",
    "httpx~=0.28.0",
    "aiohttp~=3.13.0",
    "click~=8.3.0",
    "rich~=14.3.0",
    "python-dotenv~=1.2.0",
    "psutil~=6.0.0",
    "pyyaml~=6.0.0",
    # Pinned to exact versions — native deps with frequent breaking changes.
    # Bump manually and test thoroughly; not covered by Dependabot.
    "neonize==0.3.17.post0",
    "duckduckgo-search~=8.1.0",
    "sqlite-vec==0.1.9",
    "orjson~=3.10.0",
    "msgpack~=1.1.0",
    "opentelemetry-api~=1.30.0",
    "opentelemetry-sdk>=1.30,<1.42",
    "watchdog>=4.0.0",
    "xxhash~=3.5.0",
]

[project.optional-dependencies]
tui = [
    "questionary~=2.1.0",
]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "mypy>=1.20.0",
    # Pinned to exact version — must match CI lint job version.
    # Dependabot updates this via the deps(dev) weekly schedule.
    "ruff==0.15.12",
    "hypothesis>=6.152.0",
    "pytest-benchmark>=4.0.0",
    "pip-audit>=2.10.0",
    "pip-tools>=7.4.0",
    "pytest-timeout>=2.3.0",
]

[project.scripts]
custombot = "main:cli"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "PL",   # pylint (non-blocking — ignored rules to be removed incrementally)
    "PERF", # perflint — performance anti-patterns (non-blocking)
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default argument (dataclasses need this)
    # PL rules with existing violations — remove ignores incrementally as violations are fixed.
    "PLC0415",  # import-outside-top-level (615 violations; was 618 before config_watcher/main.py fixes)
    "PLR2004",  # magic-value-comparison (549 violations)
    "PLR0913",  # too-many-arguments (63 violations)
    "PLR0912",  # too-many-branches (19 violations)
    "PLR0915",  # too-many-statements (16 violations)
    "PLR0911",  # too-many-return-statements (11 violations)
    "PLW2901",  # redefined-loop-name (10 violations)
    "PLW0603",  # global-statement (7 violations)
    "PLW0108",  # unnecessary-lambda (6 violations)
    "PLR1730",  # if-stmt-min-max (5 violations)
    "PLW1510",  # subprocess-run-without-check (3 violations)
    "PLR0124",  # comparison-with-itself (1 violation)
    "PLR5501",  # collapsible-else-if (1 violation)
    # PERF rules with existing violations — remove ignores incrementally as violations are fixed.
    "PERF401",  # manual-list-append (16 violations)
]

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "neonize.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "sqlite_vec.*"
ignore_errors = true

# Strict type checking for src.bot — the most complex module (~2000 lines)
# with the highest interaction surface.  Enabling strict here catches type
# errors in the critical message-processing path while avoiding disruption
# to the rest of the codebase.  Non-blocking in CI initially.
[[tool.mypy.overrides]]
module = "src.bot.*"
disallow_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
strict = true

# Strict type checking for src.core — message pipeline, event bus, tool
# executor, dedup service, and serialization.  Extends the same rollout
# pattern as src.bot.*.  Non-blocking in CI initially.
[[tool.mypy.overrides]]
module = "src.core.*"
disallow_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
strict = true

# Strict type checking for src.rate_limiter — per-chat, per-skill sliding-
# window rate limiting with complex state tracking.  Extends the same
# rollout pattern as src.bot.* and src.core.*.  Non-blocking in CI initially.
[[tool.mypy.overrides]]
module = "src.rate_limiter"
disallow_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
strict = true

# Strict type checking for src.config — complex nested dataclass
# transformations, config hot-reload diffs, and JSON schema validation.
# Extends the same rollout pattern as src.bot.*, src.core.*, and
# src.rate_limiter.  Non-blocking in CI initially.
[[tool.mypy.overrides]]
module = "src.config.*"
disallow_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
strict = true

# Strict type checking for src.llm — OpenAI-compatible async LLM client,
# provider protocol, and error classifier.  Extends the same rollout pattern
# as src.bot.*, src.core.*, src.rate_limiter, and src.config.*.
# Non-blocking in CI initially.
[[tool.mypy.overrides]]
module = "src.llm.*"
disallow_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
strict = true

# Strict type checking for src.security — path validation, prompt injection
# defense, payload signing, PII redaction, encryption, and template engine.
# Extends the same rollout pattern as the modules above.
# Non-blocking in CI initially.
[[tool.mypy.overrides]]
module = "src.security.*"
disallow_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
strict = true

# Strict type checking for src.scheduler — async task scheduler engine,
# cron helpers, and persistence.  Extends the same rollout pattern.
# Non-blocking in CI initially.
[[tool.mypy.overrides]]
module = "src.scheduler.*"
disallow_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "bench_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short --timeout=120"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (integration/e2e, network-dependent). Use -m 'not slow' to skip.",
]
